[gd_scene load_steps=13 format=3 uid="uid://dadudkfv4nprj"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_v10fm"]
[ext_resource type="Texture2D" uid="uid://bdpxrfmebmn3w" path="res://Textures/Enemy/giant_amoeba_new.png" id="2_p2xyg"]
[ext_resource type="PackedScene" uid="uid://8qpqxca3v05p" path="res://Utility/hurt_box.tscn" id="3_m71si"]
[ext_resource type="PackedScene" uid="uid://bfcmpfltcfccm" path="res://Utility/hit_box.tscn" id="4_e8ogk"]
[ext_resource type="AudioStream" uid="uid://bbw71khcsg613" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_aupic"]
[ext_resource type="PackedScene" uid="uid://drbow2l4igbn6" path="res://Utility/soft_collision_box.tscn" id="6_6omg3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8y70w"]
size = Vector2(84, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4r0h"]
size = Vector2(92, 100)

[sub_resource type="Animation" id="Animation_fndc4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xvjhn"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 0.8), Color(2, 2, 2, 0.6), Color(2.5, 2.5, 2.5, 0.4), Color(3, 3, 3, 0.2), Color(3, 3, 3, 0)]
}

[sub_resource type="Animation" id="Animation_pm3nj"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajlna"]
_data = {
"RESET": SubResource("Animation_fndc4"),
"death": SubResource("Animation_xvjhn"),
"walk": SubResource("Animation_pm3nj")
}

[node name="enemy_super" type="CharacterBody2D" groups=["boss"]]
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_v10fm")
movement_speed = 75.0
hp = 8000
knockback_recovery = 100.0
knockback_recovery_base = 100.0
experience = 100
enemy_damage = 40

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("2_p2xyg")

[node name="HurtBox" parent="." instance=ExtResource("3_m71si")]
collision_mask = 20
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-3, 15)
shape = SubResource("RectangleShape2D_8y70w")

[node name="HitBox" parent="." instance=ExtResource("4_e8ogk")]
visible = false
position = Vector2(-1.97659, 3.37956)
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0" groups=["attacks"]]
position = Vector2(-1.02341, 5.62044)
shape = SubResource("RectangleShape2D_x4r0h")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aupic")
volume_db = -17.0
pitch_scale = 0.9

[node name="UltRecovery" type="Timer" parent="."]
one_shot = true

[node name="RushingTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="RushTimer" type="Timer" parent="RushingTimer"]
wait_time = 2.0
one_shot = true

[node name="HideTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ResetLocTimer" type="Timer" parent="."]
autostart = true

[node name="DebuffTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="GetDirTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="SoftCollisionBox" parent="." instance=ExtResource("6_6omg3")]
position = Vector2(-4, -2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_ajlna")
}

[node name="StaggerTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="hurt_ult" from="HurtBox" to="." method="_on_hurt_box_hurt_ult"]
[connection signal="timeout" from="UltRecovery" to="." method="_on_ult_recovery_timeout"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
[connection signal="timeout" from="ResetLocTimer" to="." method="_on_reset_loc_timer_timeout"]
[connection signal="timeout" from="DebuffTimer" to="." method="_on_debuff_timer_timeout"]
[connection signal="timeout" from="GetDirTimer" to="." method="_on_get_dir_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StaggerTime" to="." method="_on_stagger_time_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="SoftCollisionBox"]
